[workspace]
members = ["general/echo/kmdf/driver/*","general/echo/kmdf/exe", "interustceptor/driver"]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false
repository = "https://github.com/microsoft/windows-rust-driver-samples"
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

[workspace.dependencies]
wdk = { version = "0.1.0", path = "../windows-drivers-rs/crates/wdk" }
wdk-alloc = { version = "0.1.0", path = "../windows-drivers-rs/crates/wdk-alloc" }
wdk-build = { version = "0.1.0", path = "../windows-drivers-rs/crates/wdk-build" }
wdk-panic = { version = "0.1.0", path = "../windows-drivers-rs/crates/wdk-panic" }
wdk-sys = { version = "0.1.0", path = "../windows-drivers-rs/crates/wdk-sys" }
